package hadoop.tools.posum;

option java_package = "org.apache.hadoop.yarn.proto";

option java_outer_classname = "POSUMProtos";

enum EntityType {
    TYPE_APP = 0;
    TYPE_JOB = 1;
    TYPE_TASK = 2;
    TYPE_APP_HISTORY = 3;
    TYPE_JOB_HISTORY = 4;
    TYPE_TASK_HISTORY = 5;
    TYPE_HISTORY = 6;
}

message SingleEntityRequestProto {
    required EntityType type = 1;
    required string id = 2;
}

message SingleEntityResponseProto {
    required EntityType type = 1;
    optional bytes entity = 2;
}

message AppProfileProto {
    required string id = 1;
    optional int64 startTime = 2;
    optional int64 finishTime = 3;
    optional string user = 4;
    optional string name = 5;
    optional AppState state = 6;
    optional AppStatus status = 7;
    optional AppTrackingUI trackingUI = 8;

    enum AppState {
        STATE_NULL = 0;
        STATE_NEW = 1;
        STATE_NEW_SAVING = 2;
        STATE_SUBMITTED = 3;
        STATE_ACCEPTED = 4;
        STATE_RUNNING = 5;
        STATE_FINISHED = 6;
        STATE_FAILED = 7;
        STATE_KILLED = 8;
    }

    enum AppStatus {
        STATUS_NULL = 0;
        STATUS_UNDEFINED = 1;
        STATUS_SUCCEEDED = 2;
        STATUS_FAILED = 3;
        STATUS_KILLED = 4;
    }

    enum AppTrackingUI {
        UI_NULL = 0;
        UI_RM = 1;
        UI_AM = 2;
        UI_HISTORY = 3;
    }
}

message JobProfileProto {
    required string id = 1;
    optional string name = 2;
    optional string appId = 3;
    optional string user = 4;
    optional int32 totalMapTasks = 5;
    optional int32 totalReduceTasks = 6;
    optional int32 inputSplits = 7; // only from conf
    optional int64 inputBytes = 8; // only from conf
    optional int64 outputBytes = 9; // only in history
    optional int64 submitTime = 10; // only in history
    optional int64 startTime = 11;
    optional int64 finishTime = 12;
    optional JobState state = 13;
    optional float mapProgress = 14;
    optional float reduceProgress = 15;
    optional int32 completedMaps = 16;
    optional int32 completedReduces = 17;
    optional bool uberized = 18;
    optional int32 avgMapDuration = 19;
    optional int32 avgReduceDuration = 20;
    optional int32 avgTaskDuration = 21;

    enum JobState {
        STATE_NULL = 0;
        STATE_NEW = 1;
        STATE_INITED = 2;
        STATE_RUNNING = 3;
        STATE_SUCCEEDED = 4;
        STATE_FAILED = 5;
        STATE_KILLED = 6;
        STATE_ERROR = 7;
    }
}


